# SynthEd

./: .codecov.yml  .coderabbit.yaml  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml  requirements.txt  run_calibration.py  run_pipeline.py  setup.py
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  links.yml  publish.yml
calibration_output/: nsga2_all_profiles.json  nsga2_default.json  nsga2_default_seed2024.json  nsga2_default_seed42.json  nsga2_high_dropout_developing.json  nsga2_low_dropout_corporate.json  nsga2_mega_university.json  nsga2_moderate_dropout_western.json
configs/: default.json
docs/: CALIBRATION_METHODOLOGY.md  GUIDE.md  THEORY.md  calibration-methodology.md  dashboard-ui-audit-2026-04-17.md
docs/superpowers/plans/: 2026-04-02-dual-track-gpa.md
docs/superpowers/specs/: 2026-04-02-v1-roadmap-design.md
docs/wiki/: calibration-and-analysis.md  data-export.md  dropout-mechanics.md  engagement-formula.md  grading-and-gpa.md  index.md  pipeline-walkthrough.md  simulation-loop.md  theory-modules.md
scripts/: measure_ssq_effect.py  ssq_effect_results.json
synthed/: __init__.py  calibration.py  doc_facts.py  pipeline.py  pipeline_config.py
synthed/agents/: __init__.py  backstory_templates.py  factory.py  name_pools.py  persona.py
synthed/analysis/: __init__.py  _sim_runner.py  auto_bounds.py  nsga2_calibrator.py  oulad_targets.py  oulad_validator.py  pareto_utils.py  sensitivity.py  sobol_sensitivity.py  trait_calibrator.py
synthed/benchmarks/: __init__.py  generator.py  profiles.py
synthed/dashboard/: __init__.py  __main__.py  app.py  charts.py  config_bridge.py  theme.py
synthed/dashboard/components/: calibrate_panel.py  distribution_editor.py  param_panel.py  (+2 more)
synthed/data_output/: __init__.py  exporter.py  oulad_exporter.py  oulad_mappings.py
synthed/report/: __init__.py  charts.py  generator.py  translations.py
synthed/simulation/: __init__.py  engine.py  engine_config.py  environment.py  grading.py  institutional.py  semester.py  social_network.py  state.py  statistics.py
synthed/utils/: llm.py  llm_memory.py  log_config.py  validation.py
synthed/validation/: __init__.py  types.py  validator.py
tests/: _parallel_fakes.py  conftest.py  test_auto_bounds.py  test_backstory_templates.py  test_baulke_institutional.py  test_benchmarks.py  test_calibration.py  test_coverage_boost.py  test_coverage_gaps.py  test_dashboard.py  test_dashboard_a11y.py  test_dashboard_calibrate.py  test_dashboard_nav.py  test_dashboard_theme.py  test_dual_track_gpa.py  test_engine.py  test_engine_config.py  test_engine_grading.py  test_environment.py  test_environmental_shocks.py  test_factory.py  test_gpa.py  test_grading.py  test_institutional_config.py  test_institutional_integration.py  test_llm_cache.py  test_llm_client.py  test_llm_cost_warning.py  test_llm_enrichment.py  test_llm_memory.py  test_name_pools.py  test_network_scaling.py  test_nsga2_calibrator.py  test_opportunity_cost.py  test_oulad_export.py  test_pareto_utils.py  test_persona.py  test_pipeline_config.py  test_pipeline_integration.py  test_report.py  (+11 more)
(+16 files in other folders)
