[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthedu"
dynamic = ["version"]
description = "Agent-Based Synthetic Educational Data Generation for ODL Research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Halis Aykut Cosgun", email = "h.aykut.cosgun@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Upper bounds pin out the scipy 1.18.0 + numpy 2.5.0 combo: scipy 1.18.0's
    # array-API ks_1samp passes `where` positionally to ndtr, which numpy 2.5.0
    # rejects ("ndtr() takes from 1 to 2 positional arguments but 3 were given"),
    # breaking stats.kstest/pearsonr across the validation suite. scipy 1.17.x +
    # numpy 2.4.x verified green; lift the caps once fixed upstream.
    "numpy>=1.24.0,<2.5",
    "scipy>=1.10.0,<1.18",
    "uuid_utils>=0.9.0,<1.0.0",
    "SALib>=1.4.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dashboard = ["shiny>=1.0", "plotly>=5.0", "htmltools"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff"]

[project.urls]
Homepage = "https://github.com/theaiagent/SynthEd"
Repository = "https://github.com/theaiagent/SynthEd"

[tool.setuptools.packages.find]
include = ["synthed*"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
